--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -28,8 +28,12 @@
     font-size: 1.285rem
     color: $light
     padding: 0.5rem 0
-    &::placeholder
-        color: $light
+    &--light
+        &::placeholder
+            color: $light
+    &--green
+        &::placeholder
+            color: $green
 .policy
     &__checkbox
         opacity: 0
