--- a/sass/templates/_modal.sass
+++ b/sass/templates/_modal.sass
@@ -50,7 +50,9 @@
         margin-bottom: 2.7rem
     &__button
         align-items: flex-end
-        
+.label
+    &__green
+        color: rgba(54, 54, 54, 0.5)
    
 
         
