--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -1,8 +1,8 @@
 .prijects
+    padding-bottom: 30rem
+    padding-top: 10rem
     &-title
         text-align: center
-   
-       
         &__heading
             text-transform: uppercase
             font-family: 'Yeseva One', cursive
