--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -34,6 +34,7 @@ img
                 justify-content: center
                 margin-left: auto
                 margin-right: auto
+                margin-bottom: 2.5rem
                 color: $green
                 font-size: 1.3rem
                 line-height: 2rem
@@ -42,6 +43,8 @@ img
                 color: $light
         &__heading
             line-height: 2.25rem
+            &--control
+                color: $light
             &--primary
                 color: $primary
                 text-align: left
@@ -54,6 +57,8 @@ img
                 text-align: left
                 font-size: 1.286rem
                 line-height: 1.786rem
+            &--dezign
+                color: $dark
         &__plese
             display: flex
 
@@ -81,4 +86,5 @@ img
                 background-color: $primary
                 margin: 0 1rem
                 border-radius: 30px
+   
                 
