--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -1,11 +1,77 @@
 .control
-    min-height: 100vh
+    //min-height: 100vh
     width: 100%
-    /*display: table*/
-    /*background: url("../video/ocean.jpg")*/
+    margin-bottom: 30rem
+    &__video
+        position: relative
+        display: flex
+        margin: auto
+        margin-bottom: 4.428rem
+        max-width: 58.357rem
+        min-height: 31rem
+        background: $dark url('../img/video-control.jpg') center no-repeat
+        box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.15)
+        &::before
+            content: ''
+            position: absolute
+            width: 100%
+            height: 100%
+            background-color: rgba($dark, 0.8)
+    &__text
+        max-width: 40.785rem
+        margin: auto
+        margin-bottom: 4.285rem
+        text-align: center
+        font-size: 1.428rem
+        line-height: 2.4rem
+        &::before
+            content: ''
+            display: block
+            width: 55px
+            height: 2px
+            margin: auto
+            margin-bottom: 2.5rem
+            background-color: $primary
+            border-radius: 30px
+    &__form
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-between
+        max-width: 55rem
+        margin: auto
+    &__input-group
+        display: flex
+        flex-direction: column
+        flex-basis: 30%
+    
+    &__policy
+        flex-basis: 100%
+        margin: auto
+        margin-top: 1.2rem
+        &__label
+            justify-content: center
+    &__label
+        margin-bottom: 7px
+
+    &__button
+        padding: 1.2857rem 4.7857rem
+
+
+.video
+    &-play
+        position: relative
+        margin: auto
+
+    
+  
 .section-title
+    margin-top: -30rem
+    color: $light
+    &__image
+        padding-bottom: 1rem
     &__control
         /* display: table-cell*/
         /*vertical-align: middle*/
-        color: $dark
+       
+        
         text-align: center
