--- a/sass/templates/_dezign.sass
+++ b/sass/templates/_dezign.sass
@@ -1,13 +1,15 @@
 .dezign
    &__fon
-        position: absolute
-        width: 100%
-        height: 100vh
-        background: $dark url('../img/bg-lines.svg') center
-        background-size: 100%
-        margin-top: 300px
+      position: absolute
+      width: 100%
+      height: 100vh
+      background: $dark url('../img/bg-lines.svg') center
+      background-size: 100%
+      margin-top: 400px
+   &__section-title
+      margin-top: 3rem
         
-   
+
         
 
    
