fix: fixeg media for control and types

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -151,6 +151,60 @@
             &-prev, &-next
                 width: 17%
                 margin-top: 0.2rem
+    .prijects
+        padding-bottom: 20rem
+        
+    .control
+        margin-bottom: 30rem
+    .section-title
+        margin-top: -90rem
+    .types
+        &__section-title
+            margin-top: 30rem
+    .swiper
+        &-button
+            &-prev, &-next
+                bottom: -0.8rem
+    .section
+        &--dark
+            height: 165rem
+    .control
+        &__text
+            color: $light
+        &__button
+            padding-top: 1.5rem
+            margin: auto
+        &__label
+            color: rgba($light ,0.5)
+        &__policy
+            order: 0
+            flex-basis: 100%
+            flex-direction: row
+            color: $light
+            align-items: start
+            justify-content: start
+            
+            padding-bottom: 1rem
+            
+        &__input-group
+            flex-basis: 100%
+            color: $light
+            padding-bottom: 1rem
+            
+    .form
+        &__input
+            &:placeholder
+                color: $light
+    .types
+        &__section-title
+            margin-top: -27rem
+    .dezign
+        &__section-title
+            margin-top: 7rem
+    .section-title
+        &__text
+            color: $light
+            text-align: center
     
 @media screen and ( max-width: 375px )
     .col
