--- a/sass/templates/_control.sass
+++ b/sass/templates/_control.sass
@@ -45,8 +45,10 @@
         flex-basis: 30%
     
     &__policy
+        order: 5
+        
         flex-basis: 100%
-        margin: auto
+        align-items: center
         margin-top: 1.2rem
         &__label
             justify-content: center
@@ -70,8 +72,4 @@
     &__image
         padding-bottom: 1rem
     &__control
-        /* display: table-cell*/
-        /*vertical-align: middle*/
-       
-        
         text-align: center
