--- a/css/style.css
+++ b/css/style.css
@@ -496,6 +496,26 @@ img {
         margin: 0 1rem;
         border-radius: 30px; }
 
+@-webkit-keyframes colorChenge {
+  0% {
+    color: #fff; }
+  25% {
+    color: #bd5713; }
+  50% {
+    color: #320f83; }
+  100% {
+    color: #f5d49f; } }
+
+@keyframes colorChenge {
+  0% {
+    color: #fff; }
+  25% {
+    color: #bd5713; }
+  50% {
+    color: #320f83; }
+  100% {
+    color: #f5d49f; } }
+
 .header {
   position: fixed;
   left: 0;
@@ -513,7 +533,9 @@ img {
 .logo {
   color: #E3B873;
   text-transform: uppercase;
-  font-size: 1.1rem; }
+  font-size: 1.1rem;
+  -webkit-animation: colorChenge 5s liner 0s infinite;
+  animation: colorChenge 5s liner 0s infinite; }
 
 .nav__item {
   text-decoration: none;
@@ -650,7 +672,6 @@ img {
         line-height: 3rem; }
 
 .prijects-title__text {
-  /*font-family: "FuturaBookC", cursive*/
   text-transform: none;
   width: 70%; }
   .prijects-title__text--light {
@@ -758,8 +779,9 @@ img {
     flex-direction: column;
     flex-basis: 30%; }
   .control__policy {
+    order: 5;
     flex-basis: 100%;
-    margin: auto;
+    align-items: center;
     margin-top: 1.2rem; }
     .control__policy__label {
       justify-content: center; }
@@ -778,8 +800,6 @@ img {
   .section-title__image {
     padding-bottom: 1rem; }
   .section-title__control {
-    /* display: table-cell*/
-    /*vertical-align: middle*/
     text-align: center; }
 
 .types__section-title {
@@ -1010,7 +1030,47 @@ img {
 @media screen and (max-width: 409px) {
   .swiper-button-prev, .swiper-button-next {
     width: 17%;
-    margin-top: 0.2rem; } }
+    margin-top: 0.2rem; }
+  .prijects {
+    padding-bottom: 20rem; }
+  .control {
+    margin-bottom: 30rem; }
+  .section-title {
+    margin-top: -90rem; }
+  .types__section-title {
+    margin-top: 30rem; }
+  .swiper-button-prev, .swiper-button-next {
+    bottom: -0.8rem; }
+  .section--dark {
+    height: 165rem; }
+  .control__text {
+    color: #ffffff; }
+  .control__button {
+    padding-top: 1.5rem;
+    margin: auto; }
+  .control__label {
+    color: rgba(255, 255, 255, 0.5); }
+  .control__policy {
+    order: 0;
+    flex-basis: 100%;
+    flex-direction: row;
+    color: #ffffff;
+    align-items: start;
+    justify-content: start;
+    padding-bottom: 1rem; }
+  .control__input-group {
+    flex-basis: 100%;
+    color: #ffffff;
+    padding-bottom: 1rem; }
+  .form__input:placeholder {
+    color: #ffffff; }
+  .types__section-title {
+    margin-top: -27rem; }
+  .dezign__section-title {
+    margin-top: 7rem; }
+  .section-title__text {
+    color: #ffffff;
+    text-align: center; } }
 
 @media screen and (max-width: 375px) {
   .col-50 {
