--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -14,6 +14,7 @@
     color: $primary
     text-transform: uppercase
     font-size: 1.1rem
+    animation: colorChenge 5s liner 0s infinite
 .nav
     &__item
         text-decoration: none
