--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -18,6 +18,8 @@ img
         text-transform: uppercase
         font-family: 'Yeseva One', cursive
         font-size: 1.1rem
+        &--steps
+            margin-top:  6rem
         
         &__text
             display: block
@@ -50,14 +52,15 @@ img
                 text-align: left
                 font-size: 1.93rem
                 line-height: 2.64rem
-                &-step
-                    margin-bottom: 3rem
+             
             &--light
                 color: $light
                 text-align: left
                 font-size: 1.286rem
                 line-height: 1.786rem
             &--dezign
+                color: $dark
+            &--clients
                 color: $dark
         &__plese
             display: flex
