--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,6 +12,8 @@
 @import 'templates/types'
 @import 'templates/dezign'
 @import 'templates/steps'
+@import 'templates/clients'
+@import 'templates/footer'
 @import 'templates/modal'
 
 @import 'media'
