--- a/sass/templates/_dezign.sass
+++ b/sass/templates/_dezign.sass
@@ -6,8 +6,11 @@
       background: $dark url('../img/bg-lines.svg') center
       background-size: 100%
       margin-top: 400px
+      
    &__section-title
       margin-top: 3rem
+      &__text
+         text-align: center
         
 
         
