--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -210,6 +210,21 @@
     .col
         &-50
             width: 95%
+    .footer
+        background: $dark 
+        &__menu
+            display: none
+        &-wrap
+            width: 100%
+        &__input-group
+            flex-basis: 100%
+        &__policy
+            left: 0
+             
+        &__button
+            padding: 1.55rem 12rem
+    
+        
      
 
     
