--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -46,3 +46,25 @@
     &__menu
         background-color: $dark
         padding: 4.285rem
+    &__map
+        min-height: 33.21rem
+        margin: 2rem 0
+    &__text
+        width: 42.071rem
+        font-size: 1.428rem
+        color: $primary
+        font-family: 'Yeseva One', cursive
+        text-transform: uppercase
+        line-height: 2rem
+        text-align: center
+        margin-right: auto
+        margin-left: auto
+    &__icon
+        display: flex
+        margin-right: auto
+        margin-left: auto
+        align-items: center
+        justify-content: center
+        
+        &__mail
+            margin-right: 1.5rem
