--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -251,6 +251,10 @@
             padding: 2.4rem 16rem
             &--primary
                 font-size: 1.6rem
+        &__map
+            max-width: 95%
+            margin-left: auto
+            margin-right: auto
     .clients
         display: none
     
