--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -47,8 +47,11 @@
         background-color: $dark
         padding: 4.285rem
     &__map
+        margin-left: auto
+        margin-right: auto
         min-height: 33.21rem
-        margin: 2rem 0
+        width: 66.071rem
+        margin-top: 2rem
     &__text
         width: 42.071rem
         font-size: 1.428rem
