--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -69,9 +69,7 @@
         &__text
             margin-left: 0
             margin-bottom: 8rem
-    /*.section
-        padding: 2rem 0*/
-           
+              
     .section-title
         &__heading
             &--dezign
@@ -104,8 +102,7 @@
         &__scroll-down
             display: none
     
-
-            
+         
     
 @media screen and ( max-width: 610px )
     html
@@ -120,8 +117,8 @@
     .title
         font-size: 1.64rem
     .hero
-        background: $dark url('../img/hero-bg.jpg') no-repeat center
-        width: 100%
+       /* background: $dark url('../img/hero-bg.jpg') no-repeat center
+        width: 100%*/
         &__instagram
             display: none
         &__text
@@ -144,8 +141,7 @@
     .hero
         &__scroll-down
             display: none
-        &__content
-        max-width: 90%
+     
     
 @media screen and ( max-width: 409px )
     .swiper
@@ -259,12 +255,7 @@
         display: none
     
         
-@media screen and ( max-width: 360px )
-    .hero
-        &__content
-            margin-left: 2rem  
-
-    
+   
 @media screen and ( max-width: 350px )
     .contacts
        &__phone
