--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,6 +14,9 @@
 @import 'templates/steps'
 @import 'templates/clients'
 @import 'templates/footer'
+@import 'templates/thenks'
 @import 'templates/modal'
+
+
 
 @import 'media'
