--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -15,15 +15,7 @@
         width: 100%
         height: 100%
         background-color: rgba($dark, 0.7)
-    /*&::after
-       content: ''
-       position: absolute
-       bottom: 0
-       left: 0
-       right: 0
-       width: 100%
-       height: 3.46rem
-       background: $dark*/
+    
 
     &__content
         position: relative
@@ -34,7 +26,7 @@
         max-width: 35.714rem
         line-height: 1.7
     &__button
-        float: left;
+        float: left
         flex-direction: row
         margin-right: 1.429rem
         width: 18.6rem
